[gd_scene load_steps=2 format=3 uid="uid://bltm517wxy1ib"]

[ext_resource type="Script" uid="uid://b2ykp601ogk3o" path="res://mod_loader/editor/dictionary_editor_panel.gd" id="1_gss1y"]

[node name="DictionaryEditorPanel" type="VBoxContainer"]
script = ExtResource("1_gss1y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="name" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "字典名"

[node name="panelControl" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "字典"

[node name="panel" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="add_pos" type="VBoxContainer" parent="panel"]
unique_name_in_owner = true
layout_mode = 2

[node name="add_btn" type="Button" parent="panel"]
layout_mode = 2
text = "+"

[connection signal="pressed" from="HBoxContainer/panelControl" to="." method="_on_panel_control_pressed"]
[connection signal="pressed" from="panel/add_btn" to="." method="_on_add_btn_pressed"]
